# Face-recognition

./: .directory  .gitignore  AdaBoost.hi  AdaBoost.hs  AdaBoost.hs~  Detector  Detector.hi  Detector.hs  Features.hs~  GreyImage.hi  GreyImage.hs  GreyImage.hs~  HaarClassifier.hi  HaarClassifier.hs  HaarFeatures.hi  HaarFeatures.hs  HaarFeatures.hs~  Image.hi  Image.hs  Image.hs~  IntegralImage.hi  IntegralImage.hs  IntegralImage.hs~  Main  Main.aux  Main.hi  Main.hp  Main.hs  Main.hs~  Main.old.ps  Main.ps  Primitives.hi  Primitives.hs  Rotation.hs  Trainer.hi  Trainer.hs  WeakClassifier.hs~  Window.hi  Window.hs  Window.hs~  (+6 more)
LearningTests/good/: .directory
data/: classifier.cl  classifier_200.cl  classifier_200_incr_2.cl  classifier_200_incr_3.cl  classifier_200_sizeMult_1_moveMult_2.cl  classifier_400_incr_3.cl  classifier_500.cl  classifier_move_2_size_2_19_19.cl  classifier_move_2_size_2_fp_0.000005.cl  classifier_move_2_size_2_fp_0.00001.cl
demos/: Benchmark.hs  ExtractTrainingSet.hs  HaarDetector.hs  HaarTrainer.hs  Images.hs  Main.hs  Rotation.hs
docs/: LFW : Results.mht  Scale-invariant feature transform - Wikipédia.mht
src/AI/Learning/: AdaBoost.hs  Classifier.hs  DecisionStump.hs  KMeans.hs
src/Data/List/: Shuffle.hs
src/Graphics/Vision/: .directory  GreyImage.hs  Image.hs  IntegralImage.hs  Primitives.hs
src/Vision/: Histogram.hs  Image.hs  Primitive.hs  Primitives.hs
src/Vision/Haar/: Cascade.hs  Classifier.hs  Detector.hs  Feature.hs  Features.hs  HaarClassifier.hs  Trainer.hs  Window.hs
src/Vision/Image/: GreyImage.hs  IImage.hs  IntegralImage.hs  RGBAImage.hs  RGBImage.hs
src/Vision/Image/GreyImage/: Base.hs  Conversion.hs  Storage.hs
src/Vision/Image/RGBAImage/: Base.hs  Conversion.hs  Storage.hs
src/Vision/Image/RGBImage/: Base.hs  Conversion.hs  Storage.hs
src/Vision/Images/: GreyImage.hs  Image.hs  IntegralImage.hs
src/Vision/LQP/: Pattern.hs
tests/: Main.hs
tests/Tests/: Config.hs
tests/Tests/AI/Learning/: AdaBoost.hs  bupa.data
tests/Tests/Data/List/: Shuffle.hs
tests/Tests/Vision/: Haar.hs  Image.hs  Images.hs  Primitive.hs  Primitives.hs
